crates/sakka-test/tests/trybuild/store_missing_context_field.stderr
error[E0609]: no field `missing` on type `&mut Ctx`
  --> tests/trybuild/store_missing_context_field.rs:11:21
   |
11 |     #[sakka(store = missing)]
   |                     ^^^^^^^ unknown field
   |
   = note: available field is: `present`
